--- a/WebApi0903/Web.config
+++ b/WebApi0903/Web.config
@@ -14,6 +14,7 @@
   </connectionStrings>
   <appSettings></appSettings>
   <system.web>
+    <customErrors mode="Off"></customErrors>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
