自訂 OnException 的程式範例
http://www.asp.net/web-api/overview/error-handling/exception-handling

--- a/WebApi0903/WebApi0903.csproj
+++ b/WebApi0903/WebApi0903.csproj
@@ -209,6 +209,8 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\ClientsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\MyErrorObject.cs" />
+    <Compile Include="Controllers\MyHandleErrorAttribute.cs" />
     <Compile Include="Controllers\ProductsController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="Global.asax.cs">
